--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_MEMBERSHIP = cineworld.io.vn:7002
-VITE_USER = cineworld.io.vn:7000
-VITE_REACTION = cineworld.io.vn:7005
-VITE_MOVIE = cineworld.io.vn:7001
+VITE_MEMBERSHIP = https://cineworld.io.vn:7002
+VITE_USER = https://cineworld.io.vn:7000
+VITE_REACTION = https://cineworld.io.vn:7005
+VITE_MOVIE = https://cineworld.io.vn:7001
