--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ VITE_MEMBERSHIP = https://cineworld.io.vn:7002
 VITE_USER = https://cineworld.io.vn:7000
 VITE_REACTION = https://cineworld.io.vn:7003
 VITE_MOVIE = https://cineworld.io.vn:7001
-VIE_MAIN = https://pbl-6-last.vercel.app
+VITE_MAIN = https://pbl-6-last.vercel.app
